# bevy_discovery

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
