[package]
name = "bevy_discovery"
version = "0.1.0"
authors = ["TheRawMeatball <therawmeatball@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["bevy"]
repository = "https://github.com/TheRawMeatball/bevy_discovery"
description = "Automatic system discovery and registration for Bevy apps"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
rustc-hash = "1.1.0"
ron = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
